--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hardhat": "^2.12.6"
   },
   "dependencies": {
-    "@nomiclabs/hardhat-truffle5": "^2.0.7"
+    "@nomiclabs/hardhat-truffle5": "^2.0.7",
+    "@vechain/web3-providers-connex": "^1.0.0"
   }
 }
