Change cache to npm

--- a/.github/workflows/common-unit-sonar.yml
+++ b/.github/workflows/common-unit-sonar.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: 'yarn'
+          cache: 'npm'
           registry-url: 'https://npm.pkg.github.com'
           always-auth: true
           scope: '@vechainfoundation'
