--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.organization=vechainfoundation
 sonar.projectKey=vechainfoundation_hardhat-plugin-sample-web3
 sonar.sources=.
-sonar.exclusions=test/**, coverage/**
+sonar.exclusions=test/**, coverage/**, hardhat.config.ts
 sonar.verbose=false
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
